# ICS45c

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
gtest/: array_gtests.cpp  coins_gtests.cpp  compute_grades_gtests.cpp  count_gtests.cpp  gtestmain.cpp  int_array_gtests.cpp  knot_gtests.cpp  map_array_gtests.cpp  mapset_gtests.cpp  matrix_gtests.cpp  picture_gtests.cpp  process_numbers_gtests.cpp  set_list_gtests.cpp  shape_gtests.cpp  stack_gtests.cpp  standard_main_gtests.cpp  string_gtests.cpp  student_gtests.cpp  tests.cpp  word_count_gtests.cpp
src/: alloc.cpp  alloc.hpp  circle.cpp  circle.hpp  coins.cpp  coins.hpp  coins_menu.cpp  coins_simple.cpp  convert_knots  convert_knots.cpp  convert_knots.hpp  gradebook.txt  letter_count  letter_count.cpp  letter_count.hpp  list.hpp  main.cpp  picture.cpp  picture.hpp  rand_numbers.txt  rectangle.cpp  rectangle.hpp  sample_doc.txt  shape.cpp  shape.hpp  square.cpp  square.hpp  stack  stack.cpp  stack.hpp  standard_main.cpp  string.hpp  student_gtests.cpp  triangle.cpp  triangle.hpp  word_count.hpp  word_count_main.cpp
